--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 									</p>
 									<ul class="actions special">
-										<li><a href="13.59.63.133/" class="button">Live</a></li>
+										<li><a href="/13.59.63.133/" class="button">Live</a></li>
 										<li><a href="https://github.com/IvanLanceDeLeon/caramel-gazelle" class="button">Github</a></li>
 
 									</ul>
@@ -119,29 +119,27 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Gamers Grub</h2>
+										<h2><a href="#">Productivity App</h2>
 									</header>
-									<a href="#" class="image fit"><img src="GamersGrub.PNG" alt="" /></a>
-									<p>Business landing page for Gamers Grub, a growing internet cafe located in Northridge, CA. While building this
-										project, I learned how to build with a responsive mobile-first approach as well as learning javascript event handlers and 
-										css animation.
+									<a href="#" class="image fit"><img src="ProductivityApp.PNG" alt="" /></a>
+									<p>My first React built app. A one page website with a to-do list, timer, clock, and calendar.  Also utilizing a quotes API to randomize a daily quote.
 										<br>
-										Technologies used: Python with Flask, Vanilla Javascript
+										Technologies used: React
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Live</a></li>
-										<li><a href="https://github.com/IvanLanceDeLeon/GamersGrub" class="button">Github</a></li>
+										<li><a href="https://ivanlancedeleon.github.io/productivity-app/" class="button">Live</a></li>
+										<li><a href="https://github.com/IvanLanceDeLeon/productivity-app" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">BlackJack</h2>
+										<h2><a href="#">CAH Multiplayer Clone with Chat</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/BlackJack.PNG" alt="" /></a>
-									<p>Blackjack game made with the purpose of utilizing advanced javascript knowledge such as ES6 objects, DOM manipulation, basic video game scripting.</p>
+									<a href="#" class="image fit"><img src="CAH.PNG" alt="" /></a>
+									<p>A clone of the popular card game Cards Against Humanity. Built with React Front-End while utilizing Socket.IO for multiplayer and real-time chat functionality</p>
 									<ul class="actions special">
-										<li><a href="https://ivanlancedeleon.github.io/IvanLanceDeLeon.github.io-blackjack" class="button">Live</a></li>
-										<li><a href="https://github.com/IvanLanceDeLeon/BlackJack" class="button">Github</a></li>
+										<li><a href="https://vigilant-brahmagupta-90f568.netlify.app/" class="button">Live</a></li>
+										
 									</ul>
 								</article>
 								<!-- <article>
